--- a/utilisateur/profil.html
+++ b/utilisateur/profil.html
@@ -24,11 +24,11 @@
                     <a class="nav-link" aria-current="page" href="../index.html">Accueil</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#contact">contact</a>
                   </li>
     
                   <li class="nav-item">
-                    <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfeJO4rRfLqXi2cChGzvrfglSTSOs_eO7XbAVcGON_6711Xdw/viewform?embedded=true">google forms</a>
+                    <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfeJO4rRfLqXi2cChGzvrfglSTSOs_eO7XbAVcGON_6711Xdw/viewform?embedded=true">s'inscrire</a>
                   </li>
                 </ul>
                 <form>
